# ragthoven

./: .gitignore  CITATION.cff  Makefile  README.md  main.py  pyproject.toml
config/: comp_case2024-climate.yaml  comp_case2024-climate_matrix_multiprompt_messages.yaml  comp_case2024-climate_matrix_no_retrieval.yaml  example_ag_news_alt_model.yaml  example_ag_news_cde.yaml  example_cnn_daily_batch_size.yaml  example_math_calculator.yaml  example_math_self_verification.yaml  single-shot-example-function-calling-messages-get-weather.yaml  single-shot-example-function-calling-messages-not-last.yaml  single-shot-example-function-calling-messages.yaml  single-shot-example-function-calling.yaml  single-shot-example-preprocessor.yaml  single-shot-example.yaml
ragoon/: __init__.py
ragoon/executors/: cde_embedder.py  embedder.py
ragoon/models/: base.py
ragoon/utils/: __init__.py
ragthoven/: __init__.py  constants.py  standalone.py
ragthoven/executors/: cde_embedder.py  embedder.py  output_writer.py  preprocessor.py  prompt_executor.py  prompt_formatter.py  reranker.py  trace_callback.py  trace_writer.py
ragthoven/models/: base.py  iter_matrix.py
ragthoven/test/: __init__.py  test_dataset_loader.py  test_intensive.py  test_iterative.py  test_output_writer.py  test_output_writer_tsv.py  test_preprocessor.py  test_simple.py  test_tracing.py
ragthoven/test/test_config/: comp_case2024-climate_matrix_multiprompt_messages.yaml  example_cnn_daily_batch_size.yaml  example_math_calculator.yaml  example_math_self_verification.yaml  single-shot-example-function-calling-messages-get-weather.yaml  single-shot-example-function-calling-messages-not-last.yaml  single-shot-example-function-calling-messages.yaml  single-shot-example-function-calling.yaml  (+2 more)
ragthoven/tools/: README.md  __init__.py  example_fun_calling.py  example_tool.py  mwahaha_tools.py  reasoning_tools.py
ragthoven/utils/: __init__.py  config_loader.py  dataset_loader.py
(+2 files in other folders)
